Añado tablas de usuario y servlet para mostrar tablas

--- a/Pract1.Sesion3/WebContent/index.html
+++ b/Pract1.Sesion3/WebContent/index.html
@@ -10,7 +10,7 @@
 <p>Por favor, introduzca a continuación sus datos:</p>
 <form action="http://localhost:8081/Pract1.Sesion3/Sesion" method="post">
 Usuario:<br> <input type="text" name="user" required><br>
-Clave: <br> <input type="text" name="password" required><br>
+Clave: <br> <input type="password" name="password" required><br>
 <input type="submit" value=“Send" > </form>
 </center>
 </body>
